# ncs

./: .gitignore  LICENSE  README.md  ignore.gitignore  ncs.sublime-project
cmd/: cleanup.sh  client.run  copytogit.cmd  copytogoogle.cmd  copytosrv.cmd  installcmake.sh  installneed.sh  installsublime.sh  makerun.cmd  makerun.sh  run.cmd  run.sh  server.run  startclient.cmd  startserver.cmd  starttest.cmd
config/: config.ini  names.ejn
history/: history.txt
libs/AVRCryptoLib/: base64.c
libs/CException/: CException.7z  readme.txt
libs/RS-232/: readme.txt
libs/bcm2835/: Makefile  config.status  readme.txt
libs/bcm2835/doc/: Makefile
libs/bcm2835/src/: Makefile
libs/iniparser/: readme.txt
libs/jansson/: readme.txt
libs/jansson/examples/: CMakeLists.txt  simple_parse.c
libs/jansson/src/: hashtable.c  hashtable_seed.c  utf.h  value.c
sessions/: coords.csv  session.csv  session.txt
src_c/: CMakeLists.txt  base64.c  base64.h  cmdworker.c  cmdworker.h  customworker.c  customworker.h  defines.h  donotcopy.txt  globals.c  globals.h  log.c  log.h  main.c  main.h  make.cmd  make.sh  protocol.c  protocol.h  sha1.c  sha1.h  socket.c  socket.h  socket_types.h  socket_utils.c  socket_utils.h  streamer.c  streamer.h  test.c  test.h  utils.c  utils.h  webworker.c  webworker.h  wsworker.c  wsworker.h
src_c/utilites/: exec.h  gps_parse.c  gps_parse.h  log.c  log.h  make.cmd  ncs_error.c  ncs_error.h  ncs_log.c  ncs_log.h  ncs_pack.c  ncs_pack.h  ncs_pack_types.h  ncs_pack_utils.c  ncs_pack_utils.h  protocol.c  protocol.h  protocol_types.h  protocol_utils.c  protocol_utils.h
src_c/workers/: base64.h  cmdworker.c  cmdworker.h  customworker.c  customworker.h  exec.c  exec.h  gpio.c  gpio.h  make.sh  map.c  map.h  py.c  py.h  sha1.c  socket.c  socket.h  socket_types.h  socket_utils.c  socket_utils.h  streamer.c  streamer.h  webworker.c  webworker.h  worker_types.h  wsworker.c  wsworker.h
src_ino/test/: test.ino
src_ino/test_ino/: test_ino.ino
src_py/: readserial.py  test.py  writeGPIO.py
todo/: todo.txt
tracks/: Brest.ini  Brest.map  Hungaroring.map  Logoysk.map  Riga.map  Trackwood.map  default.map
utils/: webserver.cmd
www/: index.html  index_old.html  index_old_1.html
www/css/: style.css  style_old.css
www/html/: index.html
www/html/debug/: debug.html  one_data_map.html
www/html/extra/: pult.html
www/html/utility/: 404.html
www/html/work/: work-full.html  work-list.html  work-one.html  work-two.html
www/js/: script.js  script.js.map
www/php/: testmail.php
www/pilots/: bobrov_info.html
www/pult/: index.html  script.js  script.js.map  script.ts  tsconfig.json
www/ts/: exec.ts  func.ts  jquery.d.ts  jquery.wrapper.ts  main.ts  map.ts  signal.ts  socket.ts  tsconfig.json  utils.ts  visual.ts
www/wsbyajke/: index.html
www/wsbyajke/js/: main.js  main.js.map
www/wsbyajke/ts/: centrgenrep.ts  main.ts  protocol.ts  tsconfig.json
www/wsbyajke/ts/interfaces/: jquery.d.ts
